# trading-topic

./: .gitignore  AGENTS.md  README.md  金融数据包实验指导书.md
.agents/skills/a-stock-data/: SKILL.md
.agents/skills/bottleneck-hunter/: SKILL.md
.agents/skills/deep-company-series/: SKILL.md
.agents/skills/dyp-ask/: SKILL.md
.agents/skills/earnings-review/: SKILL.md
.agents/skills/earnings-team/: SKILL.md
.agents/skills/financial-data/: SKILL.md
.agents/skills/income-investment/: SKILL.md
.agents/skills/industry-funnel/: SKILL.md
.agents/skills/industry-research/: SKILL.md
.agents/skills/investment-checklist/: SKILL.md
.agents/skills/investment-memo-craft/: SKILL.md
.agents/skills/investment-team/: SKILL.md
docs/: README.md
docs/product/: MVP_DESIGN.md
lab-scripts/: lab1_akshare.py  lab2_batch.py  lab2_etf.py  lab2_tushare.py  lab3_ccxt.py  lab4_yfinance.py  lab5_comprehensive.py  report_charts.py  verify_dca.py
labs/: .update_lab1_akshare_notebook.py  Lab2-银行股标准数据集.md  Lab3-单只银行定投回测.md  Lab4-多家银行并排比较.md  Lab5-银行股组合回测.md  README.md  lab1_akshare.ipynb  lab1_akshare.md  lab1_mootdx.ipynb  lab1_tushare.ipynb  lab1_tushare.md  lab1_金融数据源验证.md  lab2_batch.py  lab2_etf.py  lab2_rolling.py  pyproject.toml
labs/data/: README.md
report/: build_report.py  test_analysis.py  verify_returns.py  七家银行与基准回测报告.md
report/data/: verification.json
reports/: readme.md  五大行-earnings-2025FY-2026Q1.md
research/: README.md
research/bank-dca/: README.md  analysis.py  build_report.py  data_fetch.py  七家银行与基准回测报告.md  四大行定投回测报告.md
research1/: downloader.py  main.py
(+10 files in other folders)
